swag correction
