# internal/server/handlers/device/update.go
@@ -13,14 +13,14 @@ type UpdateLanguageRequest struct {
 }
 
 // @Summary		Update a device language
-// @Tags			Device language
+// @Tags			Device
 // @Accept			json
 // @Produce		json
 // @Param			request	body		UpdateLanguageRequest	true	"Update Device language Request"
 // @Success		200		{object}	UpdateLanguageRequest
 // @Failure		400		{object}	handlers.ErrorResponce
 // @Failure		500		{object}	handlers.ErrorResponce
-// @Router			/device [put]
+// @Router			/device_lang [put]
 func (h *DeviceHandler) UpdateLanguage(ctx *gin.Context) {
 	var req UpdateLanguageRequest
 	err := ctx.ShouldBindJSON(&req)
@@ -44,14 +44,14 @@ type UpdateGeolocationRequest struct {
 }
 
 // @Summary		Update a device geolocation
-// @Tags			Device geolocotaion
+// @Tags			Device
 // @Accept			json
 // @Produce		json
 // @Param			request	body		UpdateGeolocationRequest	true	"Update Device geolocation Request"
 // @Success		200		{object}	UpdateGeolocationRequest
 // @Failure		400		{object}	handlers.ErrorResponce
 // @Failure		500		{object}	handlers.ErrorResponce
-// @Router			/device [put]
+// @Router			/device_geo [put]
 func (h *DeviceHandler) UpdateGeolocation(ctx *gin.Context) {
 	var req UpdateGeolocationRequest
 	err := ctx.ShouldBindJSON(&req)
@@ -75,14 +75,14 @@ type UpdateEmailRequest struct {
 }
 
 // @Summary		Update a device E-mail
-// @Tags			Device E-mail
+// @Tags			Device
 // @Accept			json
 // @Produce		json
 // @Param			request	body		UpdateEmailRequest	true	"Update Device E-mail Request"
 // @Success		200		{object}	UpdateEmailRequest
 // @Failure		400		{object}	handlers.ErrorResponce
 // @Failure		500		{object}	handlers.ErrorResponce
-// @Router			/device [put]
+// @Router			/device_email [put]
 func (h *DeviceHandler) UpdateEmail(ctx *gin.Context) {
 	var req UpdateEmailRequest
 	err := ctx.ShouldBindJSON(&req)
